fix: alignments

--- a/src/components/05-components/layout/_layout-popup.scss
+++ b/src/components/05-components/layout/_layout-popup.scss
@@ -1,143 +1,122 @@
 .LayoutPopup {
-  width: 100%;
+	width: 100%;
 }
 
 .LayoutPopup__body {
-  display: flex;
+	display: flex;
 }
 
 .LayoutPopup__header {
-  display: block;
-  padding: 20px 20px 10px 20px;
+	display: block;
+	padding: 20px 20px 10px 20px;
 }
 
 .LayoutPopup__header__text {
-  color: #11455d;
-  width: 100%;
+	width: 100%;
 }
 
 .LayoutPopup__header__text__title {
-  margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 .LayoutPopup__header__text__subtitle {
-  font-size: $font-size-heading3;
-  line-height: 20px;
+	font-size: $font-size-heading3;
+	line-height: 20px;
 }
 
 .LayoutPopup_wrapper {
-  width: 100%;
+	width: 100%;
 }
 
 .LayoutPopup__intro {
-  padding: 10px 20px;
+	padding: 10px 20px;
 }
 
 .LayoutPopup__body {
-  display: flex;
-  padding: 20px 20px;
+	display: flex;
+	padding: 20px 20px;
 }
 
 .LayoutPopup.SmallPopup .LayoutPopup__body__sidebar {
-  display: none;
+	display: none;
 }
 
 .LayoutPopup__body__sidebar {
-  padding-right: 20px;
-  width: 270px;
+	padding-right: 20px;
+	width: 270px;
 }
 
 .LayoutPopup__body__content {
-  overflow-y: scroll;
-  width: 100%;
-}
+	@include component-scroll-root;
 
-.LayoutPopup__body__content::-webkit-scrollbar {
-  box-sizing: border-box;
-  height: 7px;
-  width: 7px;
-}
-
-.LayoutPopup__body__content::-webkit-scrollbar-track {
-  border-left: 3px solid $sapphire-white;
-  border-right: 3px solid $sapphire-white;
-}
-
-.LayoutPopup__body__content::-webkit-scrollbar-thumb {
-  border: 5px #6fcdca solid;
-  border-radius: 9px !important;
+	overflow-y: scroll;
+	padding-right: 15px;
+	width: 100%;
 }
 
 .LayoutPopup__footer {
-  padding: 10px 20px;
+	padding: 10px 20px;
 }
 
-.LayoutPopup__body__content>.MinHeightSmall {
-  min-height: 420px;
+.LayoutPopup__body__content > .MinHeightSmall {
+	min-height: 420px;
 }
 
-.LayoutPopup__body__content>.MinHeightMedium {
-  min-height: 500px;
+.LayoutPopup__body__content > .MinHeightMedium {
+	min-height: 500px;
 }
 
 .LayoutPopup .PhotoFrame img {
-  max-height: 60px;
-  max-width: 60px;
+	max-height: 60px;
+	max-width: 60px;
 }
 
 .LayoutPopup-loading {
-  @include absolute-center();
-  margin-top: -2px;
-  width: 250px;
+	@include absolute-center();
+	margin-top: -2px;
+	width: 250px;
 }
-
-
-
-
-
-
 
 body .Page.tablet .MainPopup,
 body .Page.desktop .MainPopup {
-  min-width: auto;
-  padding: 0;
+	min-width: auto;
+	padding: 0;
 }
 
 div.os-internal-Popup .os-internal-ui-dialog .os-internal-ui-dialog-titlebar,
 div.os-internal-Popup.os-internal-ui-dialog .os-internal-ui-dialog-titlebar {
-  background: none;
-  display: none;
-  height: 0;
+	background: none;
+	display: none;
+	height: 0;
 }
 
 div.os-internal-Popup .os-internal-ui-dialog a.os-internal-ui-dialog-titlebar-close,
 div.os-internal-Popup.os-internal-ui-dialog a.os-internal-ui-dialog-titlebar-close {
-  background: none;
-  height: 20px;
-  right: 10px;
-  top: 7px;
-  width: 20px;
+	background: none;
+	height: 20px;
+	right: 10px;
+	top: 7px;
+	width: 20px;
 
-  &:after {
-    color: $regular-beta;
-    content: '\e604';
-    display: block;
-    font-family: 'Sapphire-Icon-Font';
-    font-size: 18px;
-    font-weight: 700;
-    left: 0;
-    position: absolute;
-    top: 0;
-    transform: rotateZ(45deg);
-  }
+	&:after {
+		color: $regular-beta;
+		content: '\e604';
+		display: block;
+		font-family: 'Sapphire-Icon-Font';
+		font-size: 18px;
+		font-weight: 700;
+		left: 0;
+		position: absolute;
+		top: 0;
+		transform: rotateZ(45deg);
+	}
 
-  &:hover {
-    opacity: 1;
-    transform: rotate(0);
+	&:hover {
+		opacity: 1;
+		transform: rotate(0);
 
-    &:after {
-      color: $regular-alpha;
-    }
-  }
-
+		&:after {
+			color: $regular-alpha;
+		}
+	}
 }
